--- a/.github/workflows/syntax.yml
+++ b/.github/workflows/syntax.yml
@@ -24,3 +24,11 @@ jobs:
         with:
             name: Syntax Results
             path: Project/Contacts_ci-*_results.json
+      - name: "Verify job"
+      run: |
+          echo "PACKAGE_JSON=$(jq -c . < Project/Contacts_ci-checksyntax_results.json)" >> $GITHUB_ENV
+          echo "Sytax Checkk Verified?\n $(jq . < Project/Contacts_ci-checksyntax_results.json)\n"
+          if [[ ${{ fromJson(env.PACKAGE_JSON).command.success }} == true ]]; then exit 0; else exit 1; fi
+          
+          
+
