--- a/.github/workflows/syntax.yml
+++ b/.github/workflows/syntax.yml
@@ -15,7 +15,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: "Download latest tool4d release and expand"
         run: |
-          curl https://resources-download.4d.com/release/20.x/20.3/101192/mac/tool4d_mac_x86.tar.xz -o tool4d.tar.xz -sL && tar xvzf tool4d.tar.xz
+          curl https://resources-download.4d.com/release/20.x/20.3/101192/mac/tool4d_mac_x86.tar.xz -o tool4d.tar.xz -sL 
+          tar xzf tool4d.tar.xz
       - name: "Run Project syntax check"
         run: |
           ./tool4d.app/Contents/MacOS/tool4d --project ${{ github.workspace }}/Project/Contacts.4DProject --user-param "checksyntax" --create-data
