--- a/.github/workflows/syntax.yml
+++ b/.github/workflows/syntax.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: "Run Project syntax check"
         run: |
-          ./tool4d.app/Contents/MacOS/tool4d  --opening-mode="interpreted" --project=${{ github.workspace }}/Project/Contacts.4DProject --user-param="checksyntax" --dataless
+          ./tool4d.app/Contents/MacOS/tool4d  --opening-mode="interpreted" --project=${{ github.workspace }}/Project/Contacts.4DProject --user-param="checksyntax" --dataless --startup-method=GH_SyntaxCheck_P 
 
       - name: "Verify job"
         run: |
