--- a/.github/workflows/syntax.yml
+++ b/.github/workflows/syntax.yml
@@ -8,14 +8,15 @@ on:
 
 jobs:
   CheckSyntax:
-    name: Check Syntax on macOS
-    runs-on: macOS-latest
+    name: Check Syntax on Windows Server 2019
+    runs-on: windows-2019
     permissions: write-all
     steps:
       - uses: actions/checkout@v3
       - name: "Download latest tool4d release and expand"
         run: |
-          curl https://resources-download.4d.com/release/20.x/20.3/101192/mac/tool4d_mac_x86.tar.xz -o tool4d.tar.xz -sL 
+          # curl https://resources-download.4d.com/release/20.x/20.3/101192/mac/tool4d_mac_x86.tar.xz -o tool4d.tar.xz -sL 
+          curl https://resources-download.4d.com/release/20.x/20.3/101192/win/tool4d_win.tar.xz -o tool4d.tar.xz -sL 
           tar xzf tool4d.tar.xz
 
       - name: "Run Project syntax check"
