--- a/.github/workflows/pr_approved.yml
+++ b/.github/workflows/pr_approved.yml
@@ -3,9 +3,10 @@ on:
     pull_request_review:
       types: [submitted]
   
-  jobs:
-    approved:
-      if: github.event.review.state == 'APPROVED'
-      runs-on: ubuntu-latest
-      steps:
-        - run: echo "This PR was approved and can be merged"
+jobs:
+  approved:
+    name: PR Approved
+    if: github.event.review.state == 'APPROVED'
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "This PR was approved and can be merged"
