--- a/.github/workflows/pr_merged.yml
+++ b/.github/workflows/pr_merged.yml
@@ -4,11 +4,12 @@ on:
       types:
         - closed
   
-  jobs:
-    if_merged:
-      if: github.event.pull_request.merged == true
-      runs-on: ubuntu-latest
-      steps:
-      - run: |
-          echo The PR was merged
+jobs:
+  merged:
+    name: PR Merged
+    if: github.event.pull_request.merged == true
+    runs-on: ubuntu-latest
+    steps:
+    - run: |
+        echo The PR was merged
   
