--- a/.github/workflows/syntax.yml
+++ b/.github/workflows/syntax.yml
@@ -14,12 +14,14 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: "Download latest tool4d release and expand"
+        shell: cmd
         run: |
           # curl https://resources-download.4d.com/release/20.x/20.3/101192/mac/tool4d_mac_x86.tar.xz -o tool4d.tar.xz -sL 
           curl https://resources-download.4d.com/release/20.x/20.3/101192/win/tool4d_win.tar.xz -o tool4d.tar.xz -sL 
           tar xzf tool4d.tar.xz
 
       - name: "Run Project syntax check"
+        shell: cmd
         run: |
           ./tool4d.app/Contents/MacOS/tool4d  --project=${{ github.workspace }}/Project/Contacts.4DProject --user-param="checksyntax" --skip-onstartup --create-data --startup-method=GH_SyntaxCheck_P 
 
@@ -30,6 +32,7 @@ jobs:
           path: Project/Contacts_ci-checksyntax_results.json
           
       - name: "Pass or Fail"
+        shell: cmd
         run: |
           [[ $(jq .command.success Project/Contacts_ci-checksyntax_results.json) == true ]] || { exit 1; }
 
