--- a/.github/workflows/compileproject.yml
+++ b/.github/workflows/compileproject.yml
@@ -5,7 +5,11 @@ on:
       - 'development'
       - 'main'
       - 'release/**'
-
+      
+concurrency:
+  group: ${{ github.ref }}
+  cancel-in-progress: true
+            
 jobs:
   CompileAndBuild:
     name: Compile to 4DZ
