--- a/.github/workflows/syntax.yml
+++ b/.github/workflows/syntax.yml
@@ -6,6 +6,10 @@ on:
     paths: 
       - 'Project/**'
 
+concurrency:
+  group: ${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   CheckSyntax:
     name: Check Syntax on Windows Server 2019
