--- a/.github/workflows/syntax.yml
+++ b/.github/workflows/syntax.yml
@@ -20,7 +20,7 @@ jobs:
       - name: "Download latest tool4d release and expand"
         run: |
           # curl https://resources-download.4d.com/release/20.x/20.3/101192/mac/tool4d_mac_x86.tar.xz -o tool4d.tar.xz -sL 
-          Invoke-WebRequest -URI  https://resources-download.4d.com/release/20.x/20.3/101192/win/tool4d_win.tar.xz -OutFile tool4d.tar.xz 
+          curl.exe -sL https://resources-download.4d.com/release/20.x/20.3/101192/mac/tool4d_mac_x86.tar.xz -o tool4d.tar.xz 
           tar xzf tool4d.tar.xz
 
       - name: "Run Project syntax check"
