--- a/.github/workflows/syntax.yml
+++ b/.github/workflows/syntax.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: "Download latest tool4d release and expand"
         run: |
-          Invoke-RestMethod https://resources-download.4d.com/release/20.x/20.3/101192/mac/tool4d_mac_x86.tar.xz -Method Get -OutFile tool4d.tar.xz 
+          curl -sL https://resources-download.4d.com/release/20.x/20.3/101192/mac/tool4d_mac_x86.tar.xz -o tool4d.tar.xz           
           tar xzf tool4d.tar.xz
 
       - name: "Run Project syntax check"
