Update the compile workflow

--- a/.github/workflows/syntax.yml
+++ b/.github/workflows/syntax.yml
@@ -19,8 +19,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: "Download latest tool4d release and expand"
         run: |
-          curl -sL https://resources-download.4d.com/release/20.x/20.3/101192/mac/tool4d_mac_x86.tar.xz -o tool4d.tar.xz           
-          tar xzf tool4d.tar.xz
+          curl -sL https://resources-download.4d.com/release/20.x/20.3/101192/win/tool4d_win.tar.xz -o tool4d.tar.xz           
+          tar xvzf tool4d.tar.xz
 
       - name: "Run Project syntax check"
         run: |
