--- a/.github/workflows/syntax.yml
+++ b/.github/workflows/syntax.yml
@@ -12,22 +12,21 @@ concurrency:
 
 jobs:
   CheckSyntax:
-    name: Check Syntax on Windows
-    runs-on: windows-2019
+    name: Check Syntax on 
+    runs-on: macOS-latest
     permissions: write-all    
     steps:
       - uses: actions/checkout@v3
       - name: "Download latest tool4d release and expand"
         timeout-minutes: 15
         run: |
-          curl https://resources-download.4d.com/release/20.x/20.3/101192/win/tool4d_win.tar.xz -o tool4d.tar.xz           
-          dir "C:\Program Files\Git\usr\bin"
-          C:\"Program Files"\Git\usr\bin\tar.exe xvJf tool4d.tar.xz -C tool4d
+          curl https://resources-download.4d.com/release/20.x/20.3/101192/mac/tool4d_mac_x86.tar.xz -o tool4d.tar.xz -sL
+          tar xvzf tool4d.tar.xz
 
       - name: "Run Project syntax check"
         timeout-minutes: 15
         run: |
-          ./tool4d/tool4d.exe --project=${{ github.workspace }}/Project/Contacts.4DProject --user-param="checksyntax" --skip-onstartup --create-data --startup-method=GH_SyntaxCheck_P 
+        ./tool4d.app/Contents/MacOS/tool4d --project=${{ github.workspace }}/Project/Contacts.4DProject --user-param="checksyntax" --skip-onstartup --create-data --startup-method=GH_SyntaxCheck_P 
 
       - uses: actions/upload-artifact@v3
         name: Upload Artifacts
