--- a/.github/workflows/syntax.yml
+++ b/.github/workflows/syntax.yml
@@ -26,7 +26,7 @@ jobs:
       - name: "Run Project syntax check"
         timeout-minutes: 15
         run: |
-          ./tool4d.app/Contents/MacOS/tool4d --project=${{ github.workspace }}/Project/Contacts.4DProject --user-param="checksyntax" --skip-onstartup --create-data --startup-method=GH_SyntaxCheck_P 
+          ./tool4d.app/Contents/MacOS/tool4d --project=${{ github.workspace }}/Project/Contacts.4DProject --user-param="checksyntax" --skip-onstartup --dataless --startup-method=GH_SyntaxCheck_P 
 
       - uses: actions/upload-artifact@v3
         name: Upload Artifacts
