--- a/.github/workflows/syntax.yml
+++ b/.github/workflows/syntax.yml
@@ -6,16 +6,34 @@ on:
     paths: 
       - 'Project/**'
 
+concurrency:
+  group: ${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   CheckSyntax:
-    name: Check Syntax on macOS
+    name: Check Syntax on ${{ github.ref_name }}
     runs-on: macOS-latest
-    permissions: write-all
+    permissions: write-all    
     steps:
       - uses: actions/checkout@v3
       - name: "Download latest tool4d release and expand"
+        timeout-minutes: 15
         run: |
-          curl https://resources-download.4d.com/release/20.x/20.3/101192/mac/tool4d_mac_x86.tar.xz -o tool4d.tar.xz -sL && tar xvzf tool4d.tar.xz
+          curl https://resources-download.4d.com/release/20.x/20.3/101192/mac/tool4d_mac_x86.tar.xz -o tool4d.tar.xz -sL
+          tar xzf tool4d.tar.xz
+
       - name: "Run Project syntax check"
+        timeout-minutes: 15
         run: |
-          ./tool4d.app/Contents/MacOS/tool4d --project ${{ github.workspace }}/Project/Contacts.4DProject --dataless --user-param "checksyntax"
+          ./tool4d.app/Contents/MacOS/tool4d --project=${{ github.workspace }}/Project/Contacts.4DProject --user-param="checksyntax" --skip-onstartup --dataless --startup-method=GH_SyntaxCheck_P 
+
+      - uses: actions/upload-artifact@v3
+        name: Upload Artifacts
+        with:
+          name: Syntax Results
+          path: Project/Contacts_ci-checksyntax_results.json
+          
+      - name: "Pass or Fail"
+        run: |
+          [[ $(jq .command.success Project/Contacts_ci-checksyntax_results.json) == true ]] || { exit 1; }
