--- a/.github/workflows/compileproject.yml
+++ b/.github/workflows/compileproject.yml
@@ -5,6 +5,7 @@ on:
       - 'development'
       - 'main'
       - 'release/**'
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.ref }}
@@ -19,7 +20,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: "Download latest tool4d release and expand"
         run: |
-          curl https://resources-download.4d.com/release/20.x/20.3/101192/mac/tool4d_mac_x86.tar.xz -o tool4d.tar.xz -sL 
+          curl https://resources-download.4d.com/release/20.x/20.3/latest/mac/tool4d_mac_x86.tar.xz -o tool4d.tar.xz -sL 
           tar xzf tool4d.tar.xz
 
       - name: Compile and Build 4DZ Package
