--- a/.github/workflows/syntax.yml
+++ b/.github/workflows/syntax.yml
@@ -5,6 +5,7 @@ on:
       - development
     paths: 
       - 'Project/**'
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.ref }}
@@ -20,7 +21,7 @@ jobs:
       - name: "Download latest tool4d release and expand"
         timeout-minutes: 15
         run: |
-          curl https://resources-download.4d.com/release/20.x/20.3/101192/mac/tool4d_mac_x86.tar.xz -o tool4d.tar.xz -sL
+          curl https://resources-download.4d.com/release/20.x/20.3/latest/mac/tool4d_mac_x86.tar.xz -o tool4d.tar.xz -sL
           tar xzf tool4d.tar.xz
 
       - name: "Run Project syntax check"
