--- a/.github/workflows/compileproject.yml
+++ b/.github/workflows/compileproject.yml
@@ -5,6 +5,7 @@ on:
       - 'development'
       - 'main'
       - 'release/**'
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.ref }}
@@ -19,12 +20,12 @@ jobs:
       - uses: actions/checkout@v3
       - name: "Download latest tool4d release and expand"
         run: |
-          curl https://resources-download.4d.com/release/20.x/20.3/101192/mac/tool4d_mac_x86.tar.xz -o tool4d.tar.xz -sL 
+          curl https://resources-download.4d.com/release/20.x/20.3/latest/mac/tool4d_mac_x86.tar.xz -o tool4d.tar.xz -sL 
           tar xzf tool4d.tar.xz
 
       - name: Compile and Build 4DZ Package
         run: |
-          ./tool4d.app/Contents/MacOS/tool4d  --project=${{ github.workspace }}/Project/Contacts.4DProject --user-param="compileproject" --skip-onstartup --dataless --startup-method=GH_SyntaxCheck_P 
+          ./tool4d.app/Contents/MacOS/tool4d  --project=${{ github.workspace }}/Project/Contacts.4DProject --user-param="compileproject" --skip-onstartup --dataless --startup-method=GHPipeline_EntryPoint_P 
 
       - uses: actions/upload-artifact@v3
         name: Upload Artifacts
