--- a/.github/workflows/syntax.yml
+++ b/.github/workflows/syntax.yml
@@ -5,6 +5,7 @@ on:
       - development
     paths: 
       - 'Project/**'
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.ref }}
@@ -20,13 +21,13 @@ jobs:
       - name: "Download latest tool4d release and expand"
         timeout-minutes: 15
         run: |
-          curl https://resources-download.4d.com/release/20.x/20.3/101192/mac/tool4d_mac_x86.tar.xz -o tool4d.tar.xz -sL
+          curl https://resources-download.4d.com/release/20.x/20.3/latest/mac/tool4d_mac_x86.tar.xz -o tool4d.tar.xz -sL
           tar xzf tool4d.tar.xz
 
       - name: "Run Project syntax check"
         timeout-minutes: 15
         run: |
-          ./tool4d.app/Contents/MacOS/tool4d --project=${{ github.workspace }}/Project/Contacts.4DProject --user-param="checksyntax" --skip-onstartup --dataless --startup-method=GH_SyntaxCheck_P 
+          ./tool4d.app/Contents/MacOS/tool4d --project=${{ github.workspace }}/Project/Contacts.4DProject --user-param="checksyntax" --skip-onstartup --dataless --startup-method=GHPipeline_EntryPoint_P 
 
       - uses: actions/upload-artifact@v3
         name: Upload Artifacts
@@ -37,3 +38,5 @@ jobs:
       - name: "Pass or Fail"
         run: |
           [[ $(jq .command.success Project/Contacts_ci-checksyntax_results.json) == true ]] || { exit 1; }
+
+          
