--- a/.github/workflows/compileproject.yml
+++ b/.github/workflows/compileproject.yml
@@ -31,7 +31,7 @@ jobs:
         name: Upload Artifacts
         with:
           name: Syntax Results
-          path: ../Compiled Database
+          path: ../Compiled Database/*
           
       - name: "Pass or Fail"
         run: |
