--- a/.github/workflows/compileproject.yml
+++ b/.github/workflows/compileproject.yml
@@ -18,11 +18,28 @@ jobs:
     permissions: write-all
     steps:
       - uses: actions/checkout@v3
-      - name: "Download latest tool4d release and expand"
-        run: |
-          curl https://resources-download.4d.com/release/20.x/20.3/latest/mac/tool4d_mac_x86.tar.xz -o tool4d.tar.xz -sL 
-          tar xzf tool4d.tar.xz
 
+      - name: Cache tool4d app
+        id: tool4d-cache
+        uses: actions/cache@v3
+        env:
+          cache-name: tool4d-cache
+        with:
+          path:  ./tool4d.app
+          key: ${{ runner.os }}-build-${{ env.cache-name }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+          
+      - if: ${{ steps.tool4d-cache.outputs.cache-hit != 'true' }}
+        name:  Download latest tool4d release and expand
+        continue-on-error: true
+        timeout-minutes: 15
+        run: |
+          curl https://resources-download.4d.com/release/20.x/20.3/latest/mac/tool4d_mac_x86.tar.xz -o tool4d.tar.xz -sL
+          tar xzf tool4d.tar.xz
+      
       - name: Compile and Build 4DZ Package
         run: |
           ./tool4d.app/Contents/MacOS/tool4d  --project=${{ github.workspace }}/Project/Contacts.4DProject --user-param="compileproject" --skip-onstartup --dataless --startup-method=GHPipeline_EntryPoint_P 
