Updates from Development (#13)
* Update CI with Syntax Workflow for testing (#6)

* Update CI with Syntax Workflow for testing

* Updating workflow

* Updating workflow

* Updating workflow

* Updating workflow

* Updating workflow

* Updating workflow tooling

* Updating workflow tooling

* Updating workflow tooling

* Updating workflow tooling

* Updating workflow tooling

* Updating workflow tooling

* Update tool4d

* Tool4d Does Not Support Components or Plugins

* Tool4d Does Not Support Components or Plugins

* Tool4d Does Not Support Components or Plugins

* Leaving tool4d in place for now

* Leaving tool4d in place for now, with special entrypoint method

* Adding the compile workflow

* Update the compile workflow

* Update the compile workflow

* Update the compile workflow

* Update the compile workflow

* Update the compile workflow

* Update the compile workflow

* Update the compile workflow

* Update the compile workflow

* Update the compile workflow

* Update the compile workflow

* Update the compile workflow

* Update the compile workflow

* Update the compile workflow

* Update the compile workflow

* Update the compile workflow

* Update the compile workflow TAR Command

* Update the compile workflow TAR Command

* Update the compile workflow TAR Command

* Update the compile workflow TAR Command

* Update the compile workflow TAR Command

* Update the compile workflow TAR Command

* Update the compile workflow back to macOS

* Update the compile workflow back to macOS

* Update the compile workflow back to macOS

* Update the compile workflow back to macOS

* Update the compile workflow back to macOS

* Update the compile workflow back to macOS

* Update the compile workflow back to macOS

* Update the compile workflow back to macOS

* Update the compile workflow back to macOS

---------

Co-authored-by: James Scott <James_Scott@sweetwater.com

--- a/.github/workflows/syntax.yml
+++ b/.github/workflows/syntax.yml
@@ -38,7 +38,8 @@ jobs:
           curl https://resources-download.4d.com/release/20.x/20.3/latest/mac/tool4d_mac_x86.tar.xz -o tool4d.tar.xz -sL
           tar xzf tool4d.tar.xz
 
-      - name: Create Cache tool4d app
+      - if: ${{ steps.restore-tool4d-cache.outputs.cache-hit != 'true' }}          
+        name: Create Cache tool4d app
         id: create-tool4d-cache
         uses: actions/cache@v3
         env:
@@ -51,11 +52,6 @@ jobs:
             ${{ runner.os }}-build-
             ${{ runner.os }}-
 
-  CheckSyntax:
-    name: Check Syntax on ${{ github.ref_name }}
-    runs-on: macOS-latest
-    permissions: write-all    
-    steps:
       - uses: actions/checkout@v3
       - name: "Run Project syntax check"
         timeout-minutes: 15
