--- a/.github/workflows/compileproject.yml
+++ b/.github/workflows/compileproject.yml
@@ -13,8 +13,8 @@ concurrency:
             
 jobs:
   
-  Tool4DCasheBuild:
-    name: Restore tool4d cache
+  CompileAndBuild:
+    name: Compile to 4DZ
     runs-on: macOS-latest
     permissions: write-all    
     steps:
@@ -39,7 +39,8 @@ jobs:
           curl https://resources-download.4d.com/release/20.x/20.3/latest/mac/tool4d_mac_x86.tar.xz -o tool4d.tar.xz -sL
           tar xzf tool4d.tar.xz
 
-      - name: Create Cache tool4d app
+      - if: ${{ steps.restore-tool4d-cache.outputs.cache-hit != 'true' }}
+        name: Create Cache tool4d app
         id: create-tool4d-cache
         uses: actions/cache@v3
         env:
@@ -52,12 +53,6 @@ jobs:
             ${{ runner.os }}-build-
             ${{ runner.os }}-
 
-  CompileAndBuild:
-    name: Compile to 4DZ
-    runs-on: macOS-latest
-    permissions: write-all
-    needs: Tool4DCasheBuild
-    steps:
       - uses: actions/checkout@v3     
       - name: Compile and Build 4DZ Package
         run: |
