--- a/.github/workflows/syntax.yml
+++ b/.github/workflows/syntax.yml
@@ -12,32 +12,14 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  PrepTool4D:
+    uses: ./.github/workflows/tool4dcaching.yml
+    
   CheckSyntax:
-    name: Check Syntax on ${{ github.ref_name }}
+    name: Check Syntax on ${{ github.ref }}
     runs-on: macOS-latest
-    permissions: write-all    
-    steps:
-      - name: Restore Cache for tool4d app
-        id: restore-tool4d-cache
-        uses: actions/cache@v3
-        env:
-          cache-name: tool4d-cache
-        with:
-          path:  ./tool4d.app
-          key: ${{ runner.os }}-build-${{ env.cache-name }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
-      
-      - if: ${{ steps.restore-tool4d-cache.outputs.cache-hit != 'true' }}
-        name:  Download latest tool4d release and expand
-        continue-on-error: true
-        timeout-minutes: 15
-        run: |
-          curl https://resources-download.4d.com/release/20.x/20.3/latest/mac/tool4d_mac_x86.tar.xz -o tool4d.tar.xz -sL
-          tar xzf tool4d.tar.xz
-
+    permissions: write-all        
+    steps:     
       - uses: actions/checkout@v3     
       - name: "Run Project syntax check"
         timeout-minutes: 15
