--- a/.github/workflows/compileproject.yml
+++ b/.github/workflows/compileproject.yml
@@ -44,8 +44,11 @@ jobs:
       - uses: actions/upload-artifact@v4.3.1
         name: Upload Artifacts
         with:
-          name: Syntax Results
-          path: ${{ github.workspace }}/Compiled Database/*
+          name: Compile Results
+          path: |
+            Compiled Database/*
+            Project/Contacts_ci-compileproject_results.json
+
           
       - name: "Pass or Fail"
         run: |
