Updating caches for pipeline

--- a/.github/workflows/compileproject.yml
+++ b/.github/workflows/compileproject.yml
@@ -46,7 +46,7 @@ jobs:
         with:
           name: Compile Results
           path: |
-            Compiled Database/*
+            Compiled Database/
             Project/Contacts_ci-compileproject_results.json
 
           
