--- a/.github/workflows/syntax.yml
+++ b/.github/workflows/syntax.yml
@@ -37,6 +37,14 @@ jobs:
           ${{ runner.os }}-build-
           ${{ runner.os }}-
 
+    - if: ${{ steps.restore-tool4d-cache.outputs.cache-hit != 'true' }}
+      name: Download latest tool4d release and expand
+      continue-on-error: true
+      timeout-minutes: 15
+      run: |
+        curl https://resources-download.4d.com/release/20.x/20.3/latest/mac/tool4d_mac_x86.tar.xz -o tool4d.tar.xz -sL
+        tar xzf tool4d.tar.xz
+    
     - name: "Run Project syntax check"
       timeout-minutes: 15
       run: |
