--- a/.github/workflows/contexts.yml
+++ b/.github/workflows/contexts.yml
@@ -1,5 +1,9 @@
 name: Context testing
-on: push
+on: 
+  push: 
+    branches:
+      - development
+  workflow_dispatch:
 
 jobs:
   dump_contexts_to_log:
