Update gitignore and compile exit on error

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@
 Compiled Database/*
 Components/*
 Plugins/*
-symphony_ci-*.json
+Project/*_ci-*.json
 
 #--------------------------------
 # Ignore derived data
