--- a/.github/workflows/syntax.yml
+++ b/.github/workflows/syntax.yml
@@ -1,11 +1,13 @@
 name: Check Syntax
 on:
+  workflow_dispatch:
   pull_request:
     branches:
       - development
+      - main
+      - release/**
     paths: 
       - 'Project/**'
-  workflow_dispatch:
 
 concurrency:
   group: ${{ github.ref }}
