--- a/.github/workflows/syntax.yml
+++ b/.github/workflows/syntax.yml
@@ -1,11 +1,7 @@
 name: Check Syntax
 on:
   workflow_dispatch:
-  pull_request:
-    branches:
-      - development
-    paths: 
-      - 'Project/**'
+  push:
 
 concurrency:
   group: ${{ github.ref }}
