--- a/.github/workflows/compileproject.yml
+++ b/.github/workflows/compileproject.yml
@@ -72,6 +72,8 @@ jobs:
       - name: 'Create Project Release'
         uses: softprops/action-gh-release@v2.0.4
         with:
-          files: Compile-Results.*
+          files: |
+            Compiled Database/*
+            Project/Contacts_ci-compileproject_results.json
           tag_name: v${{ github.run_number }}
           name: Release V${{ github.run_number }}
