--- a/.github/workflows/compileproject.yml
+++ b/.github/workflows/compileproject.yml
@@ -70,6 +70,7 @@ jobs:
       - name: 'Create Project Release'
         uses: softprops/action-gh-release@v2.0.4
         with:
+          generate_release_notes: true
           files: |
             Compile-Results/Compiled Database/
             Compile-Results/Project/Contacts_ci-compileproject_results.json
