--- a/.github/workflows/compileproject.yml
+++ b/.github/workflows/compileproject.yml
@@ -72,7 +72,7 @@ jobs:
         with:
           generate_release_notes: true
           files: |
-            Compile-Results/Compiled Database/
+            Compile-Results/Compiled Database/*
             Compile-Results/Project/Contacts_ci-compileproject_results.json
           tag_name: v${{ github.run_number }}
           name: Release V${{ github.run_number }}
