--- a/.github/workflows/compileproject.yml
+++ b/.github/workflows/compileproject.yml
@@ -71,6 +71,7 @@ jobs:
         uses: thedoctor0/zip-release@0.7.5
         with:
           type: 'zip'
+          path: Compile-Results
           filename: 'Contacts-R${{ github.run_number }}.zip'
 
       - name: 'Create Project Release'
