--- a/.github/workflows/compileproject.yml
+++ b/.github/workflows/compileproject.yml
@@ -59,8 +59,9 @@ jobs:
         
   release-content:
     name: 'Create Project Release'
-    runs-on: ubuntu-latest
+    runs-on: macOS-latest
     needs: [ CompileAndBuild ]
+    if: startsWith(github.ref, 'refs/tags/')
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
     steps:      
