--- a/.github/workflows/syntax.yml
+++ b/.github/workflows/syntax.yml
@@ -1,6 +1,10 @@
 name: Check Syntax
 on:
   workflow_dispatch:
+  pull_request_target:
+      branches:
+        - main
+        - development
   push:
 
 concurrency:
