Updating workflow with releases

--- a/.github/workflows/compileproject.yml
+++ b/.github/workflows/compileproject.yml
@@ -75,10 +75,18 @@ jobs:
           path: Compile-Results
           filename: 'Contacts-R${{ github.run_number }}.zip'
 
+      - name: Create Release Notes
+        uses: docker://decathlon/release-notes-generator-action:2.0.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          OUTPUT_FOLDER: temp_release_notes
+          USE_MILESTONE_TITLE: "true"
+
       - name: 'Create Project Release'
         uses: softprops/action-gh-release@v2.0.4
         with:
           generate_release_notes: true
+          body: temp_release_notes
           files: 'Contacts-R${{ github.run_number }}.zip'
           tag_name: v${{ github.run_number }}
           name: Release V${{ github.run_number }}
