--- a/.github/workflows/compileproject.yml
+++ b/.github/workflows/compileproject.yml
@@ -61,7 +61,7 @@ jobs:
     name: 'Create Project Release'
     runs-on: macOS-latest
     needs: [ CompileAndBuild ]
-    if: startsWith(github.ref, 'refs/tags/')
+    # if: startsWith(github.ref, 'refs/tags/')
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
     steps:      
