--- a/.github/workflows/compileproject.yml
+++ b/.github/workflows/compileproject.yml
@@ -59,7 +59,7 @@ jobs:
         
   release-content:
     name: 'Create Project Release'
-    runs-on: macOS-latest
+    runs-on: ubuntu-latest
     needs: [ CompileAndBuild ]
     # if: startsWith(github.ref, 'refs/tags/')
     env:
