--- a/.github/workflows/compileproject.yml
+++ b/.github/workflows/compileproject.yml
@@ -47,15 +47,61 @@ jobs:
       - uses: actions/upload-artifact@v4.3.1
         name: Upload Artifacts
         with:
-          name: Compile Results
+          name: Compile-Results
           path: |
             Compiled Database/
             Project/Contacts_ci-compileproject_results.json
-
           
       - name: "Pass or Fail"
         run: |
           [[ $(jq .command.success Project/Contacts_ci-compileproject_results.json) == true ]] || { exit 1; }
+        
+  release-content:
+    name: 'Create Project Release'
+    runs-on: ubuntu-latest
+    needs: [ CompileAndBuild ]
+    # if: startsWith(github.ref, 'refs/tags/')
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+    steps:      
+      - name: 'Download Build Artifacts'
+        uses: actions/download-artifact@v4.1.4
 
-          
+      - name: Archive Release
+        uses: thedoctor0/zip-release@0.7.5
+        with:
+          type: 'zip'
+          path: Compile-Results
+          filename: 'Contacts-R${{ github.run_number }}.zip'
 
+      - name: Checkout
+        uses: actions/checkout@v4.1.2
+
+      - name: Build Changelog
+        id: github_release
+        uses: mikepenz/release-changelog-builder-action@v4
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          outputFile: CHANGELOG.md
+
+      # - name: Create Release
+      #   uses: mikepenz/action-gh-release@v0.2.0-a03 #softprops/action-gh-release
+      #   with:
+      #     body: ${{steps.github_release.outputs.changelog}}
+
+      - name: Extract release notes
+        id: extract-release-notes
+        uses: ffurrer2/extract-release-notes@v2
+        with:
+          changelog_file: CHANGELOG.md # ${{steps.github_release.outputs.changelog}}
+          release_notes_file: RELEASE_NOTES.md
+
+      - name: 'Create Project Release'
+        uses: softprops/action-gh-release@v2.0.4
+        with:
+          generate_release_notes: true
+          body_path: RELEASE_NOTES.md
+          files: 'Contacts-R${{ github.run_number }}.zip'
+          tag_name: v${{ github.run_number }}
+          name: Release V${{ github.run_number }}
