--- a/.github/workflows/compileproject.yml
+++ b/.github/workflows/compileproject.yml
@@ -84,6 +84,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           outputFile: CHANGELOG.md
+          fromTag: "v101"
+          toTag: "v110"
 
       # - name: Create Release
       #   uses: mikepenz/action-gh-release@v0.2.0-a03 #softprops/action-gh-release
